merge- última versão do agendamento